objects/Visit.object
<CustomObject>
    <fields>
        <fullName>Compliance_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Specialist</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSP Compliance Specialist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logged_in_User_Assigned_Visit__c</fullName>
        <formula>IF(UserId  =  $User.Id, True, False)</formula>
        <label>Logged in User Assigned Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reported_BSAAO__c</fullName>
        <label>Reported BSAAO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Significant_Observation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Significant Observation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Types_of_Soil_Amendments__c</fullName>
        <label>Types of Soil Amendments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Under_Development__c</fullName>
        <label>Under Development</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <formula>VisitType.Name</formula>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Visit</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Visit</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>PlannedVisitStartTime</columns>
        <columns>ActualVisitStartTime</columns>
        <columns>ActualVisitEndTime</columns>
        <columns>Visit_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>